name:                Spear
version:             0.1.0.0
synopsis:            Thicker Arrows
description:         Please see README.md
homepage:            http://github.com/githubuser/Spear#readme
license:             BSD3
license-file:        LICENSE
author:              Matt Gambogi, Travis Whitaker
maintainer:          m@gambogi.com
copyright:           2015
category:            Control
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  default-language:    Haskell2010
  exposed-modules:     Control.Spear
  build-depends:       base >= 4.7 && < 5
